first work to integrate git commit hash on validation website

--- a/validation/html_static/templates/revision.html
+++ b/validation/html_static/templates/revision.html
@@ -1,7 +1,10 @@
 {{#revisions}}
 <div>
 	<!-- color will be update by the java script method loadValidationPlots -->
-	<input class="reference-checkbox" name="revisions" id="reference-checkbox-{{label}}" value="{{label}}" checked="" type="checkbox">&nbsp;<label for="reference-checkbox-{{label}}" class="revision-label"
+	<input  class="reference-checkbox" name="revisions" 
+			id="reference-checkbox-{{label}}" 
+			value="{{label}}" checked="" 
+			type="checkbox">&nbsp;<label for="reference-checkbox-{{label}}" class="revision-label"
 		style="color: black;">{{ label }}</label>
 <div>
 {{/revisions}}
