--- a/validation/html_static/css/main.css
+++ b/validation/html_static/css/main.css
@@ -22,6 +22,10 @@
   margin: 20px auto;
 }
 
+.revision-details{
+	font-size: 80%;
+}
+
 .revision_label {
     font-weight: bold;
     font-size: 120%;
