--- a/validation/html_static/templates/revision.html
+++ b/validation/html_static/templates/revision.html
@@ -1,11 +1,17 @@
 {{#revisions}}
 <div>
 	<!-- color will be update by the java script method loadValidationPlots -->
+	<div>
 	<input  class="reference-checkbox" name="revisions" 
 			id="reference-checkbox-{{label}}" 
 			value="{{label}}" checked="" 
 			type="checkbox">&nbsp;<label for="reference-checkbox-{{label}}" class="revision-label"
 		style="color: black;">{{ label }}</label>
-<div>
+	</div>
+	<!-- show some extra information, but not for the reference plots -->
+	{{#if label != "reference" }}
+		<div class="revision-details">{{creation_date}} | {{git_hash}}</div>
+	{{/if}}
+</div>
 {{/revisions}}
 <button on-click='loadSelectedRevisions'>Load selected</button>
