--- a/validation/html_static/templates/revision.html
+++ b/validation/html_static/templates/revision.html
@@ -10,7 +10,7 @@
 	</div>
 	<!-- show some extra information, but not for the reference plots -->
 	{{#if label != "reference" }}
-		<div class="revision-details">{{creation_date}} | {{git_hash}}</div>
+		<div class="revision-details">{{creation_date}} {{creation_timezone}} | <a class="revision-details-repo-link" href="https://stash.desy.de/projects/B2/repos/software/commits/{{git_hash}}">{{git_hash}}</a></div>
 	{{/if}}
 </div>
 {{/revisions}}
